# reaction

./: .clang-format  .gitignore  CMakeLists.txt  claud_learning.md  learning.md  mordern.md  readme.md
example/: reflect.cc
include/reaction/: concept.h  dataSource.h  expression.h  observerNode.h  react.h  resource.h  utility.h
learn/: cpp.md  linux.md  main.cc  stl.md  test.cc
observer-turiols/: dem.cc  n2n.cc  observer.cc  readme.md  test
test/: main  main.cc  test.cpp
